--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^6.23.0",
     "react-scripts": "4.0.1",
     "semantic-ui-css": "^2.4.1",
     "web-vitals": "^0.2.4"
@@ -14,6 +15,7 @@
   },
   "scripts": {
     "start": "PORT=8000 react-scripts start",
+    "build": "react-scripts build",
     "server": "json-server --watch db.json -p 8002"
   },
   "eslintConfig": {
